src/tests/snapshots/cargo_vet__tests__crate_policies__extraneous_crate_versions.snap
---
source: src/tests/crate_policies.rs
expression: "format!(\"{:?}\", miette::Report::new(e))"
---
  × There are some issues with your third-party policy entries

Error: 
  × some versioned policy entries don't correspond to crates being used
  │   third-party:3.0.0
  help: Remove the `policy` entries
