src/tests/snapshots/cargo_vet__tests__crate_policies__third_party_crates_need_all_versions_2.snap
---
source: src/tests/crate_policies.rs
expression: "format!(\"{:?}\", miette::Report::new(e))"
---
  × There are some issues with your third-party policy entries

Error: 
  × some crates have policies that are missing an associated version
  │   third-party:1.0.0
  help: Specifing `dependency-criteria` requires explicit policies for each
        version of a crate. Add a `policy."<crate>:<version>"` entry for them.
